[package]
name = "arti-facts"
version = "1.3.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4.27"
tokio = { version = "1.45.1", features = ["fs"] }
anyhow = "1.0.98"
futures = "0.3.31"
hyper = { version = "1.4", features = ["http1", "server", "client"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
rand = "0.9.1"
sha3 = "0.11.0-rc.0"
base32 = "0.5"

arti-client = { version = "0.30.0", features = ["onion-service-service", "onion-service-client", "static", "experimental-api"] }
tor-cell = "0.30.0"
tor-hsservice = "0.30.0"
tor-proto = "0.30.0"
tor-rtcompat = { version = "0.30.0", features = ["static"] }
tor-llcrypto = "0.30.0"
tor-hscrypto = "0.30.0"

ed25519-dalek = "2.1"
zip = "4.0.0"
walkdir = "2.5.0"
tokio-util = { version = "0.7.15", features = ["io"] }
hex = "0.4.3"
chrono = "0.4.41"
uuid = { version = "1.17.0",features = ["v4"] }