[package]
name = "arti-facts"
version = "2.9.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4.27"
tokio = { version = "1.45.1", features = ["fs","macros"] }
futures = "0.3.31"
hyper = { version = "1.4", features = ["http1", "server", "client"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
rand = "0.9.1"
sha3 = "0.11.0-rc.0"
base32 = "0.5"

arti-client = { version = "0.39.0", features = ["onion-service-service", "onion-service-client", "static", "experimental-api"] }
tor-cell = "0.39.0"
tor-hsservice = "0.39.0"
tor-proto = "0.39.0"
tor-rtcompat = { version = "0.39.0", features = ["static"] }
tor-llcrypto = "0.39.0"
tor-hscrypto = "0.39.0"
tor-hsrproxy = "0.39.0"
safelog = "0.7"
shellexpand = "3.1.0"

ed25519-dalek = "2.2"
walkdir = "2.5.0"
tokio-util = { version = "0.7", features = ["io"] }
hex = "0.4.3"
chrono = { version = "0.4", features = ["serde"] }
async_zip = { version = "0.0.17", features = ["tokio", "deflate"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
lazy_static = "1.5.0"
form_urlencoded = "1.2"
tracing-subscriber = "0.3.22"
percent-encoding = "2.3.2"

